# isidore-referentiels

./: .gitignore  Note.md  Notes_atelier1.md  README.md  config-new.yaml  config.yaml  downloadSource.py  isidore_referentiels.py  pyproject.toml
Geonames/: README.md  pyproject.toml  test.json
Geonames/geonames/: init.py
Geonames/geonames/process/: geonames_resources.py  get_resource_json.py
analyze/: 1-analyze-shacl-geonames.sh  1-analyze-shacl-lcsh.sh  10-analyze-shacl-hal.sh  2-analyze-shacl-lcsh.sh  2-analyze-shacl-pactols.sh  3-analyze-shacl-bne.sh  3-analyze-shacl-rameau.sh  4-analyze-shacl-bne.sh  4-analyze-shacl-rameau.sh  5-analyze-shacl-pactols.sh  6-analyze-shacl-gemet.sh  7-analyze-shacl-geoethno.sh  8-analyze-shacl-archires.sh  9-analyze-shacl-calenda.sh
config/: config_pactol.yaml  config_rameau.yaml
config/1-geonames/: config_geonames.yaml
config/10-hal/: config_hal.yaml
config/2-lcsh/: config_lcsh.yaml
config/3-rameau/: config_rameau.yaml
config/4-bne/: config_bne.yaml
config/5-pactols/: config_pactols.yaml
config/6-gemet/: config_gemet.yaml
config/7-geoethno/: config_geoethno.yaml
config/8-archires/: config_archires.yaml
config/9-calenda/: config_calenda.yaml
config/archires/: config_archires.yaml
config/bne/: config_bne.yaml
config/calenda/: config_calenda.yaml
config/gemet/: config_gemet.yaml
config/geoethno/: config_geoethno.yaml
config/geonames/: config_geonames.yaml
config/hal/: config_hal.yaml
config/lcsh/: config_lcsh.yaml
config/pactols/: config_pactol.yaml  config_pactols.yaml
config/rameau/: config_rameau.yaml
data.bak/bne/: materias.nt.REMOVED.git-id
documentation/: documentation.pptx
isidore_referentiels/: configuration.py  diff_graphs.py  init.py  isidore.py  isidore_subprocess.py  isidore_wikidata.py  main.py  update_referentiels.py  update_resources.py  writeFiles.py
isidore_referentiels/process/: Tools.py  (+3 more)
logs/: pactols.txt
prepare/: 1-prepare-lcsh.sh  1-prepare_geonames.sh  10-prepare_hal.sh  2-prepare-lcsh.sh  2-prepare-pactols.sh  3-prepare-bne.sh  3-prepare-rameau.sh  4-prepare-bne.sh  4-prepare-rameau.sh  5-prepare-pactols.sh  9-prepare_calenda.sh  domaines_rameau.txt  env.sh  prepare.sh
prepare/referentiels/: README.md  pyproject.toml
prepare/referentiels/Geonames/geonames/: init.py
prepare/referentiels/Geonames/geonames/process/: geonames_graph.py  geonames_resources.py
prepare/referentiels/calenda/: convert_calenda_skos.py
prepare/referentiels/calenda_skos/: convert_calenda_skos.py
prepare/referentiels/hal_shs/: telecharger_HAL_SHS.py
statistics/: isidore-concepts-statistiques-juin-2024.rq
(+94 files in other folders)
