[tool.poetry]
name = "geonames"
version = "0.1.0"
description = "Downloadd all RDF Files"
authors = ["Sparna"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
urllib3 = "^2.2.3"
pandas = "^2.2.2"
rdflib = "^7.0.0"

[tool.poetry.scripts]
geonames = "geonames.init:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
